--- a/client/App/App.scss
+++ b/client/App/App.scss
@@ -277,10 +277,45 @@ body {
         padding: 20px;
         
         &.PageHome{
-          //background: green;   
-          li{
-            margin-top: 0.3em;
-            margin-bottom: 0.3em;
+          padding: 0;
+          div{
+            display: inline-block;
+            width:50%;
+            height: 50%;
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-position: center;
+            &#i1{
+              background-image: url("/medias/animals/autruche.jpg");
+
+            }
+            &#i2{
+              background-image: url("/medias/animals/raton.jpg");
+
+            }
+            &#i3{
+              background-image: url("/medias/animals/rhino.jpg");
+
+            }
+            &#i4{
+              background-image: url("/medias/animals/pig.jpg");
+
+            }
+            &#i5{
+              background-image: url("/medias/animals/fox.jpg");
+
+            }
+            &#i6{
+              background-image: url("/medias/animals/wolf.jpg");
+
+            }
+            &#i7{
+              background-image: url("/medias/animals/koala.jpg");
+
+            }
+            &#i8{
+              background-image: url("/medias/animals/autruche.jpg");
+            }
           }
         }
         &.PageTasks{
