--- a/client/App/App.scss
+++ b/client/App/App.scss
@@ -285,6 +285,12 @@ body {
             background-repeat: no-repeat;
             background-size: cover;
             background-position: center;
+            
+            @media screen and(min-width: 600px){
+              width:25%;
+              height: 50%; 
+            }
+              
             &#i1{
               background-image: url("/medias/animals/autruche.jpg");
 
