--- a/client/scss/theme/colors.scss
+++ b/client/scss/theme/colors.scss
@@ -6,4 +6,4 @@ $color_grey_medium:   #b2b2b2;
 $color_blue_medium1:  #466da0;
 $color_blue_medium2:  #315481;
 
-$color_orange:        #f26e63;
+$color_active:        #f26e63;
