--- a/client/scss/ui/ui.scss
+++ b/client/scss/ui/ui.scss
@@ -40,7 +40,7 @@ a#signup-link{
     text-align: right;
 
     .login-link-text{
-      color: $color_orange;
+      color: $color_active;
     }
         
     // Link : 'sing in' or username
