--- a/client/scss/App.css
+++ b/client/scss/App.css
@@ -18,55 +18,62 @@ html, body, #App-wrapper {
 #Header, .app-main, .app-content, #Footer, nav {
   width: 100%; }
 
+/* line 25, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/App.scss */
+.flex-row {
+  display: flex; }
+
+/* line 28, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/App.scss */
+.align-center {
+  text-align: center; }
+
+/* line 31, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/App.scss */
+.align-right {
+  text-align: right; }
+
+/* line 34, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/App.scss */
+.flex {
+  display: flex; }
+
 /* APP */
-/* line 29, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/App.scss */
+/* line 40, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/App.scss */
 body {
   background: #315481; }
-  /* line 34, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/App.scss */
+  /* line 45, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/App.scss */
   body #App-wrapper .App {
     width: 100%;
     height: 100%;
     flex-direction: column; }
-    /* line 40, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/App.scss */
+    /* line 51, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/App.scss */
     body #App-wrapper .App #Header, body #App-wrapper .App #Footer {
       position: relative; }
-    /* line 44, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/App.scss */
+    /* line 55, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/App.scss */
     body #App-wrapper .App #Header, body #App-wrapper .App nav {
       background: #315481; }
-    /* line 48, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/App.scss */
+    /* line 59, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/App.scss */
     body #App-wrapper .App #Header {
       padding: 0.8em 1.5em;
       align-items: center; }
-      /* line 52, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/App.scss */
+      /* line 63, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/App.scss */
       body #App-wrapper .App #Header h1 {
         width: 100%;
         font-size: 1.5em;
         color: #466da0; }
-      /* line 57, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/App.scss */
+      /* line 68, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/App.scss */
       body #App-wrapper .App #Header #login-buttons {
         min-width: 5em; }
-    /* line 65, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/App.scss */
+    /* line 76, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/App.scss */
     body #App-wrapper .App #Footer a {
       width: 100%;
       padding: 20px;
       text-align: center; }
-    /* line 73, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/App.scss */
+    /* line 84, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/App.scss */
     body #App-wrapper .App .app-main {
       flex: 1; }
-      /* line 76, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/App.scss */
+      /* line 87, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/App.scss */
       body #App-wrapper .App .app-main .app-content {
         overflow: auto;
         order: 2;
         background-color: #FFFFFF;
         background: #466da0; }
-    /* line 87, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/App.scss */
-    body #App-wrapper .App #Login {
-      margin-top: 2em;
-      padding: 2em;
-      background: #315481; }
-      /* line 91, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/App.scss */
-      body #App-wrapper .App #Login input {
-        padding: 0.5em;
-        margin: 0.2em; }
 
 /*# sourceMappingURL=App.css.map */
