--- a/client/scss/pages/PageAccount.css
+++ b/client/scss/pages/PageAccount.css
@@ -1,7 +1,6 @@
 /*  Colors  */
 /* line 7, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/pages/PageAccount.scss */
 html body #App-wrapper .App .app-main .app-content .Page.PageAccount {
-  padding: 20px 30px;
-  background: #466da0; }
+  padding: 20px 30px; }
 
 /*# sourceMappingURL=PageAccount.css.map */
