--- a/client/scss/pages/PageAccount.scss
+++ b/client/scss/pages/PageAccount.scss
@@ -6,8 +6,8 @@ html body #App-wrapper .App .app-main .app-content .Page{
   
 &.PageAccount{
   padding:    20px 30px;
-  background: $color_blue_medium1;
-  h1{}
+  //background: $color_blue_medium1;
+  h1{} 
   p{}
   
 
