--- a/client/scss/App.css
+++ b/client/scss/App.css
@@ -35,45 +35,40 @@ html, body, #App-wrapper {
   display: flex; }
 
 /* APP */
-/* line 40, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/App.scss */
-body {
-  background: #315481; }
-  /* line 45, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/App.scss */
-  body #App-wrapper .App {
-    width: 100%;
-    height: 100%;
-    flex-direction: column; }
-    /* line 51, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/App.scss */
-    body #App-wrapper .App #Header, body #App-wrapper .App #Footer {
-      position: relative; }
-    /* line 55, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/App.scss */
-    body #App-wrapper .App #Header, body #App-wrapper .App nav {
-      background: #315481; }
-    /* line 59, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/App.scss */
-    body #App-wrapper .App #Header {
-      padding: 0.8em 1.5em;
-      align-items: center; }
-      /* line 63, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/App.scss */
-      body #App-wrapper .App #Header h1 {
-        width: 100%;
-        font-size: 1.5em;
-        color: #466da0; }
-      /* line 68, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/App.scss */
-      body #App-wrapper .App #Header #login-buttons {
-        min-width: 5em; }
-    /* line 76, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/App.scss */
-    body #App-wrapper .App #Footer a {
+/* line 45, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/App.scss */
+body #App-wrapper .App {
+  width: 100%;
+  height: 100%;
+  flex-direction: column; }
+  /* line 51, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/App.scss */
+  body #App-wrapper .App #Header, body #App-wrapper .App #Footer {
+    position: relative; }
+  /* line 55, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/App.scss */
+  body #App-wrapper .App #Header, body #App-wrapper .App nav {
+    background: #202633; }
+  /* line 59, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/App.scss */
+  body #App-wrapper .App #Header {
+    padding: 0.8em 1.5em;
+    align-items: center; }
+    /* line 63, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/App.scss */
+    body #App-wrapper .App #Header h1 {
       width: 100%;
-      padding: 20px;
-      text-align: center; }
-    /* line 84, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/App.scss */
-    body #App-wrapper .App .app-main {
-      flex: 1; }
-      /* line 87, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/App.scss */
-      body #App-wrapper .App .app-main .app-content {
-        overflow: auto;
-        order: 2;
-        background-color: #FFFFFF;
-        background: #466da0; }
+      font-size: 1.5em;
+      color: #466da0; }
+    /* line 68, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/App.scss */
+    body #App-wrapper .App #Header #login-buttons {
+      min-width: 5em; }
+  /* line 76, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/App.scss */
+  body #App-wrapper .App #Footer a {
+    width: 100%;
+    padding: 20px;
+    text-align: center; }
+  /* line 84, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/App.scss */
+  body #App-wrapper .App .app-main {
+    flex: 1; }
+    /* line 87, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/App.scss */
+    body #App-wrapper .App .app-main .app-content {
+      overflow: auto;
+      order: 2; }
 
 /*# sourceMappingURL=App.css.map */
