--- a/client/scss/pages/PageTasks.scss
+++ b/client/scss/pages/PageTasks.scss
@@ -14,10 +14,10 @@ html body #App-wrapper .App .app-main .app-content .Page{
 
 &.PageTasks{
   padding:    20px 30px;
-  background: $color_blue_medium1;
+  //background: $color_blue_medium1;
   
   h2{
-    color: $color_orange;
+    color: $color_active;
     margin-bottom: 0.5em;
   }
   
@@ -35,7 +35,7 @@ html body #App-wrapper .App .app-main .app-content .Page{
       position:       relative;
       
       button{
-        //background: $color_orange;
+        //background: $color_active;
         color:       $color_blue_medium2;
         font-size:   1.5em;
         line-height: 1.5em;
@@ -117,13 +117,12 @@ html body #App-wrapper .App .app-main .app-content .Page{
         
         &.task-checked, &.task-private{
           color:      $color_grey_light;
-          background: $color_blue_medium1;
+          //background: $color_blue_medium_transparent;
           transition: all 0.25s;
         }
         
         &.task-checked{
           color: $color_blue_medium2;
-          //background: blue;
           .text{
             text-decoration: line-through; 
           }
@@ -131,7 +130,7 @@ html body #App-wrapper .App .app-main .app-content .Page{
         
         &.task-private{
           button.toggle-private{
-            color: $color_orange;
+            color: $color_active;
           }
         }
 
@@ -155,7 +154,7 @@ html body #App-wrapper .App .app-main .app-content .Page{
             margin-right: 0.3em;
             margin-top:   0.5em;
             &[type="submit"]{
-            background:   $color_orange;
+            background:   $color_active;
             color:        $color_blue_medium2;
             }
           }
