--- a/client/scss/pages/Pages.css
+++ b/client/scss/pages/Pages.css
@@ -1,22 +1,26 @@
 /*  Colors  */
 /* line 3, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/pages/Pages.scss */
-html body #App-wrapper .App .app-main .app-content .Page {
-  overflow: auto; }
-  /* line 6, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/pages/Pages.scss */
-  html body #App-wrapper .App .app-main .app-content .Page h1 {
+html body #App-wrapper .App .app-main .app-content .Page, body {
+  overflow: auto;
+  background: url("/medias/backgrounds/background-dark.jpg");
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat; }
+  /* line 13, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/pages/Pages.scss */
+  html body #App-wrapper .App .app-main .app-content .Page h1, body h1 {
     color: #315481;
     font-size: 26px;
     display: inline-block;
     margin-bottom: 10px;
     margin-right: 1em; }
-  /* line 13, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/pages/Pages.scss */
-  html body #App-wrapper .App .app-main .app-content .Page h2 {
+  /* line 20, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/pages/Pages.scss */
+  html body #App-wrapper .App .app-main .app-content .Page h2, body h2 {
     font-size: 18px; }
-  /* line 16, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/pages/Pages.scss */
-  html body #App-wrapper .App .app-main .app-content .Page p {
+  /* line 23, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/pages/Pages.scss */
+  html body #App-wrapper .App .app-main .app-content .Page p, body p {
     color: #ebebeb; }
-  /* line 19, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/pages/Pages.scss */
-  html body #App-wrapper .App .app-main .app-content .Page label {
+  /* line 26, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/pages/Pages.scss */
+  html body #App-wrapper .App .app-main .app-content .Page label, body label {
     color: #b2b2b2; }
 
 /*# sourceMappingURL=Pages.css.map */
