--- a/client/scss/pages/Pages.scss
+++ b/client/scss/pages/Pages.scss
@@ -1,8 +1,15 @@
 @import '../../scss/theme/colors.scss';
 
-html body #App-wrapper .App .app-main .app-content .Page{
-overflow: auto;
+html body #App-wrapper .App .app-main .app-content .Page, body{
+  
+  overflow: auto;
 
+  background: url('/medias/backgrounds/background-dark.jpg');
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  
+  
   h1{
     color: $color_blue_medium2;
     font-size: 26px;
@@ -12,12 +19,13 @@ overflow: auto;
   }
   h2{
     font-size: 18px;
-  }
+  } 
   p{
     color: $color_grey_light;
   }
   label{
     color: $color_grey_medium;
   }
+  
   
 }
