--- a/client/scss/theme/colors.scss
+++ b/client/scss/theme/colors.scss
@@ -6,4 +6,6 @@ $color_grey_medium:   #b2b2b2;
 $color_blue_medium1:  #466da0;
 $color_blue_medium2:  #315481;
 
+$color_blue_medium_transparent:  rgba(22, 32, 47, 0.61);
+
 $color_active:        #f26e63;
